--- a/src/app/shared/navbar/navbar.html
+++ b/src/app/shared/navbar/navbar.html
@@ -1,30 +1,48 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg bg-white shadow-sm sticky-top">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    
+    <a class="navbar-brand d-flex align-items-center fw-bold" routerLink="/inicio">
+      <img src="assets/6819113.png" alt="Logo" width="30" height="30" class="d-inline-block align-text-top me-2 rounded">
+      EduPlatform
+    </a>
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link"  routerLink="/inicio" >Home</a>
-          
-        </li>
-        <li class="nav-item">
-          <a class="nav-link "  routerLink="/inicio-sesion"> inicio de sesion </a>
-          
-        </li>
-        <li class="nav-item">
-        <button class="btn btn-outline-success" routerLink="/" type="submit">Perfil</button>
-        </li>
-      </ul>
-       <li class="nav-item">
-      <i class="bi bi-cart"></i>
-       </li>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
-        <button class="btn btn-outline-success" type="submit">Search</button>
+
+    <div class="collapse navbar-collapse" id="navbarContent">
+      
+      <form class="d-flex my-2 my-lg-0 me-auto ms-lg-3" role="search">
+        <div class="input-group">
+          <input class="form-control" type="search" placeholder="Buscar cursos..." aria-label="Search">
+          <button class="btn btn-outline-primary" type="submit">
+            <i class="bi bi-search"></i>
+          </button>
+        </div>
       </form>
+
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0 align-items-center">
+        
+        <li class="nav-item me-3">
+          <a class="nav-link fw-semibold" routerLink="/inicio-sesion">Iniciar sesión</a>
+        </li>
+
+        <li class="nav-item me-3">
+          <a class="nav-link position-relative" routerLink="/carrito">
+            <i class="bi bi-cart fs-5"></i>
+            <span class="position-absolute top-10 start-100 translate-middle badge rounded-pill bg-danger" style="font-size: 0.7rem;">
+              3
+            </span>
+          </a>
+        </li>
+
+        <li class="nav-item dropdown">
+          <a class="nav-link p-0" routerLink="/perfil" role="button">
+            <img src="https://via.placeholder.com/40" alt="Perfil" width="40" height="40" class="rounded-circle border border-2 border-primary" style="object-fit: cover;">
+          </a>
+        </li>
+
+      </ul>
     </div>
   </div>
 </nav>
