--- a/src/app/shared/navbar/navbar.html
+++ b/src/app/shared/navbar/navbar.html
@@ -26,6 +26,10 @@
         <li class="nav-item me-3">
           <a class="nav-link fw-semibold" routerLink="/inicio-sesion">Iniciar sesión</a>
         </li>
+        
+         <li class="nav-item me-3">
+          <a class="nav-link fw-semibold" routerLink="/registro-usuarios">Registrarse</a>
+        </li>
 
         <li class="nav-item me-3">
           <a class="nav-link position-relative" routerLink="/carrito">
@@ -38,7 +42,7 @@
 
         <li class="nav-item dropdown">
           <a class="nav-link p-0" routerLink="/perfil" role="button">
-            <img src="https://via.placeholder.com/40" alt="Perfil" width="40" height="40" class="rounded-circle border border-2 border-primary" style="object-fit: cover;">
+            <img src="assets/6819113.png" alt="Perfil" width="40" height="40" class="rounded-circle border border-2 border-primary" style="object-fit: cover;">
           </a>
         </li>
 
