--- a/src/app/shared/navbar/navbar.html
+++ b/src/app/shared/navbar/navbar.html
@@ -22,31 +22,43 @@
       </form>
 
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0 align-items-center">
-        
-        <li class="nav-item me-3">
-          <a class="nav-link fw-semibold" routerLink="/inicio-sesion">Iniciar sesión</a>
-        </li>
-        
-         <li class="nav-item me-3">
-          <a class="nav-link fw-semibold" routerLink="/registro-usuarios">Registrarse</a>
-        </li>
+  
+  @if (!auth.currentUser()) {
+    <li class="nav-item me-3">
+      <a class="nav-link fw-semibold" routerLink="/inicio-sesion">Iniciar sesión</a>
+    </li>
+    
+    <li class="nav-item me-3">
+      <a class="nav-link fw-semibold" routerLink="/registro-usuarios">Registrarse</a>
+    </li>
+  } 
+  
+  @else {
+    <li class="nav-item me-3">
+      <a class="nav-link position-relative" routerLink="/carrito">
+        <i class="bi bi-cart fs-5"></i>
+        <span class="position-absolute top-10 start-100 translate-middle badge rounded-pill bg-danger" style="font-size: 0.7rem;">
+          3
+        </span>
+      </a>
+    </li>
 
-        <li class="nav-item me-3">
-          <a class="nav-link position-relative" routerLink="/carrito">
-            <i class="bi bi-cart fs-5"></i>
-            <span class="position-absolute top-10 start-100 translate-middle badge rounded-pill bg-danger" style="font-size: 0.7rem;">
-              3
-            </span>
-          </a>
-        </li>
+    <li class="nav-item dropdown d-flex align-items-center gap-2">
+      <span class="fw-semibold">{{ auth.currentUser()?.nombre }}</span>
+      
+      <a class="nav-link p-0" routerLink="/perfil" role="button">
+        <img [src]="auth.currentUser()?.foto_perfil || 'assets/default.webp'" 
+             alt="Perfil" width="40" height="40" 
+             class="rounded-circle border border-2 border-primary" style="object-fit: cover;">
+      </a>
+      
+      <button class="btn btn-sm btn-outline-danger ms-2" (click)="auth.logout()">
+        <i class="bi bi-box-arrow-right"></i>
+      </button>
+    </li>
+  }
 
-        <li class="nav-item dropdown">
-          <a class="nav-link p-0" routerLink="/perfil" role="button">
-            <img src="assets/6819113.png" alt="Perfil" width="40" height="40" class="rounded-circle border border-2 border-primary" style="object-fit: cover;">
-          </a>
-        </li>
-
-      </ul>
+</ul>
     </div>
   </div>
 </nav>
