--- a/src/app/pages/inicio-sesion/inicio-sesion.html
+++ b/src/app/pages/inicio-sesion/inicio-sesion.html
@@ -1,29 +1,41 @@
-<div class="d-flex justify-content-center align-items-center vh-100 bg-light">
+<div class="main-wrapper">
   
-  <div class="card shadow-lg border-0 rounded-4" style="width: 100%; max-width: 400px;">
-    <div class="card-body p-5">
+  <div class="login-container card shadow-lg border-0 rounded-4 bg-white">
+    <div class="card-body p-4 w-100">
       
       <h2 class="text-center fw-bold mb-4 text-primary">Inicio de Sesión</h2>
       
-      <form>
+      <form #f="ngForm" (ngSubmit)="onSubmit(f)">
         
-        <div class="mb-3">
+        <div class="mb-3 text-start">
           <label for="inputUsuario" class="form-label fw-semibold">Usuario</label>
           <div class="input-group">
             <span class="input-group-text bg-white text-muted border-end-0">
               <i class="bi bi-person"></i>
             </span>
-            <input type="text" class="form-control border-start-0 ps-0" id="inputUsuario" placeholder="Ingresa tu usuario" required>
+            <input type="text" 
+                   class="form-control border-start-0 ps-0" 
+                   id="inputUsuario" 
+                   name="nombre"
+                   [(ngModel)]="loginData.nombre"
+                   placeholder="Ingresa tu usuario" 
+                   required>
           </div>
         </div>
 
-        <div class="mb-4">
+        <div class="mb-4 text-start">
           <label for="inputPassword" class="form-label fw-semibold">Contraseña</label>
           <div class="input-group">
             <span class="input-group-text bg-white text-muted border-end-0">
               <i class="bi bi-lock"></i>
             </span>
-            <input type="password" class="form-control border-start-0 ps-0" id="inputPassword" placeholder="********" required>
+            <input type="password" 
+                   class="form-control border-start-0 ps-0" 
+                   id="inputPassword" 
+                   name="contrasena"
+                   [(ngModel)]="loginData.contrasena"
+                   placeholder="********" 
+                   required>
           </div>
         </div>
 
