--- a/src/app/shared/navbar/navbar.html
+++ b/src/app/shared/navbar/navbar.html
@@ -42,7 +42,9 @@
         </span>
       </a>
     </li>
-
+<li class="nav-item dropdown d-flex align-items-center gap-2">
+      <a class="nav-link p-0" routerLink="/subir-cursos" role="button"> subir cursos </a>
+    </li>
     <li class="nav-item dropdown d-flex align-items-center gap-2">
       <span class="fw-semibold">{{ auth.currentUser()?.nombre }}</span>
       
