--- a/src/app/shared/navbar/navbar.html
+++ b/src/app/shared/navbar/navbar.html
@@ -46,6 +46,9 @@
       <a class="nav-link p-0" routerLink="/subir-cursos" role="button"> subir cursos </a>
     </li>
     <li class="nav-item dropdown d-flex align-items-center gap-2">
+      <a class="nav-link p-0" routerLink="/pago" role="button"> pagar </a>
+    </li>
+    <li class="nav-item dropdown d-flex align-items-center gap-2">
       <span class="fw-semibold">{{ auth.currentUser()?.nombre }}</span>
       
       <a class="nav-link p-0" routerLink="/perfil" role="button">
