--- a/src/app/pages/carrito/carrito.html
+++ b/src/app/pages/carrito/carrito.html
@@ -47,7 +47,8 @@
             </div>
             
             <div class="d-grid gap-2">
-              <button class="btn btn-success py-2 fw-bold shadow-sm">Pagar Ahora</button>
+              <button class="btn btn-success py-2 fw-bold shadow-sm" routerLink="/pago">Pagar Ahora</button>
+              
               <button class="btn btn-outline-secondary py-1" (click)="carritoService.limpiarCarrito()">Vaciar Carrito</button>
             </div>
             
