--- a/src/app/pages/detalle-curso/detalle-curso.html
+++ b/src/app/pages/detalle-curso/detalle-curso.html
@@ -1,24 +1,34 @@
 <div class="container py-5" *ngIf="curso; else loadingTpl">
   <div class="row">
     <div class="col-md-6 mb-4">
-      <img [src]="curso.foto || 'assets/default.webp'" class="img-fluid rounded shadow-lg w-100" style="object-fit: cover; max-height: 400px;" alt="{{ curso.titulo }}">
+      <img [src]="curso.foto || 'assets/default.webp'" class="img-fluid rounded shadow-lg w-100"
+        style="object-fit: cover; max-height: 400px;" alt="{{ curso.titulo }}">
     </div>
 
     <div class="col-md-6">
       <h1 class="fw-bold mb-3">{{ curso.titulo }}</h1>
       <p class="text-muted fs-5 mb-4">{{ curso.descripcion }}</p>
-      
+
       <div class="card bg-light border-0 p-4 rounded-3">
         <h3 class="fw-bold text-primary mb-3">MX$ {{ curso.precio }}</h3>
-        
+
         <div class="d-flex align-items-center mb-4">
           <i class="bi bi-people-fill text-muted me-2"></i>
           <span>{{ curso.usuarios_inscritos }} estudiantes inscritos</span>
         </div>
 
+        @if (cursoComprado) {
+        <div class="alert alert-info d-flex align-items-center mb-0" role="alert">
+          <i class="bi bi-info-circle-fill flex-shrink-0 me-2" style="font-size: 1.5rem;"></i>
+          <div class="fw-bold">
+            ¡Ya tienes este curso!
+          </div>
+        </div>
+        } @else {
         <button class="btn btn-primary btn-lg w-100 fw-bold" (click)="agregarAlCarrito()">
           <i class="bi bi-cart-plus me-2"></i> Agregar al Carrito
         </button>
+        }
       </div>
     </div>
   </div>
